--- a/info.html
+++ b/info.html
@@ -65,7 +65,7 @@
             display: inline-block; /* Allow buttons to sit next to each other */
             width: 300px; /* Set a fixed width */
             height: 150px; /* Set a fixed height to make it square */
-            color: white; /* Text color */
+            color: #2957a5; /* Text color */
             text-decoration: none; /* Remove underline */
             background-size: cover; /* Cover the entire button area */
             background-repeat: no-repeat; /* Prevent the image from repeating */
