--- a/info.html
+++ b/info.html
@@ -97,9 +97,9 @@
 <!-- add a few buttons with exterior links maybe like  -->
  <section class="hero">
         <div class="content">
-   <a style="background-image:url('tmom4.jpg');" id="more1" href="https://linktr.ee/kerehama" class="btn1">Register</a>
+   <a style="background-image:url('tmom4.jpg');" id="more1" href="linktr.ee/tmom_register" class="btn1">Register</a>
     <a style="background-image:url('tmom9.jpg');" id="more2" href="https://www.example.com" class="btn1">Calender</a>
-    <a style="background-image:url('tmom5.jpg');" id="more3" href="https://linktr.ee/kerehama1" class="btn1">Contact</a>
+    <a style="background-image:url('tmom5.jpg');" id="more3" href="https://linktr.ee/tmom_contact" class="btn1">Contact</a>
 
         </div>
     </section>
