--- a/info.html
+++ b/info.html
@@ -87,9 +87,10 @@
             <img src="tgamoa2.jpg" alt="Te Maru o Mauao Logo">
         </div>
         <nav>
-            <a id="home">Home</a>
-            <a id="more">More</a>
-            <a id="info">Info</a>
+            <a id="home" href="#">Home</a>
+	    <a id="more" href="#">More</a>
+	    <a id="info" href="#">Info</a>
+
         </nav>
     </header>
 
