--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="tabicon.png">
+    <link rel="icon" type="x-icon" href="tabicon.png">
     <script src="tmom.js" defer></script>
     <style>
         nav a:hover {
