--- a/more.html
+++ b/more.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="tabicon2.png">
     <script src="tmom.js" defer></script>
     <style>
         body {
