--- a/home.html
+++ b/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Te Maru O Mauao Basketball Association">
+	<meta property="og:image" content="bg1.jpg">
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="tabicon2.png">
