--- a/more.html
+++ b/more.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Te Maru O Mauao Basketball, TMOM, tmom, temaruomauao.basketball, tmom about, tmom history, tmom sponsors, Te Maru O Mauao Basketball sponsors">
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="tabicon2.png">
