--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Te Maru O Mauao Basketball, TMOM, tmom, temaruomauao.basketball, tmom registration, tmom register, tmom rego, tmom contact, tmom help, tmom calender, tmom games, Te Maru O Mauao Basketball help, Te Maru O Mauao Basketball contact, Te Maru O Mauao Basketball register">
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="tabicon2.png">
