--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
     <title>Te Maru o Mauao</title>
     <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="tabicon2.png">
+  <link rel="icon" type="image/x-icon" href="tabicon2.png" />
+
 
     <script src="tmom.js" defer></script>
     <style>
