--- a/more.html
+++ b/more.html
@@ -119,7 +119,8 @@
     <!-- Content container -->
     <div class="container">
         <div class="content">
-		<h1 style="font-style:italic" class="title">Te Maru o Mauao Ki Tauranga Moana Basketball Association</h1>
+		<h1 class="title">Te Maru o Mauao </h1>
+		<h1 style="font-style:italic" class="title">Tauranga Moana Basketball Association</h1>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
            
         </div>
