--- a/more.html
+++ b/more.html
@@ -121,7 +121,9 @@
         <div class="content">
 		<h1 class="title">Te Maru o Mauao </h1>
 		<h1 style="font-style:italic" class="title">Tauranga Moana Basketball Association</h1>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+   <p><p>Kia ora! We are the Tauranga Māori Basketball Association, a non-profit organization dedicated to supporting our players and teams as they compete in the <span><a href="https://www.maoribasketball.co.nz/" target="_blank">Poitūkohu Māori National Tournament</a></span>. Our mission is to empower our athletes and represent our community with pride.<br><br>
+Kia ora! Ko mātou Te Maru o Mauao Basketball Association, he rōpū kore-huamoni e tautoko ana i ō mātou kaitākaro me ā mātou kapa i te whakataetae <span><a href="https://www.maoribasketball.co.nz/" target="_blank">Poitūkohu Māori National</a></span>. Ko tā mātou whāinga he whakakaha i ā mātou kaitākaro, me te tū rangatira mō tō tātou hapori.</p>
+</p>
            
         </div>
     </div>
