--- a/more.html
+++ b/more.html
@@ -22,6 +22,17 @@
             cursor: pointer;
         }
 
+	     a {
+        color: #3B82F6; /* Blue color */
+        text-decoration: none; /* Remove underline */
+        font-weight: bold;
+    }
+    
+    a:hover {
+        color: white; /* Darker blue on hover */
+        text-decoration: underline;
+    }
+
         .column {
             width: 33.3%;
             margin-bottom: 16px;
