--- a/more.html
+++ b/more.html
@@ -22,13 +22,13 @@
             cursor: pointer;
         }
 
-	     a {
+	         p span a  {
         color: #3B82F6; /* Blue color */
         text-decoration: none; /* Remove underline */
         font-weight: bold;
     }
     
-    a:hover {
+        p span a:hover {
         color: white; /* Darker blue on hover */
         text-decoration: underline;
     }
