--- a/more.html
+++ b/more.html
@@ -9,6 +9,30 @@
 	<link rel="icon" type="image/png" href="tabicon2.png">
     <script src="tmom.js" defer></script>
     <style>
+	    /* Scrollbar styling */
+body::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+}
+
+/* Scrollbar track */
+body::-webkit-scrollbar-track {
+    background: #2957a5; /* Background color of the scrollbar track */
+    border-radius: 10px;
+}
+
+/* Scrollbar thumb */
+body::-webkit-scrollbar-thumb {
+    background-color: #feda62; /* Color of the scrollbar thumb */
+    border-radius: 10px;
+    border: 2px solid #888; /* Adds a border to create spacing */
+}
+
+/* Scrollbar thumb hover effect */
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #feda62; /* Darker color when hovering */
+}
+
+	    
         body {
             background: url('morebg.png') no-repeat top center/cover;
             font-family: Arial, sans-serif;
