--- a/more.html
+++ b/more.html
@@ -118,7 +118,7 @@
     <!-- Header -->
     <header class="header">
         <div class="logo">
-            <img src="tgamoa2.jpg" alt="Te Maru o Mauao Logo">
+	<a href="home.html"><img src="tgamoa2.jpg" alt="logo";></a>
         </div>
         <nav>
         <a id="home" href="#">Home</a>
