--- a/home.html
+++ b/home.html
@@ -80,9 +80,9 @@
             <img src="tgamoa2.jpg" alt="Te Maru o Mauao Logo">
         </div>
         <nav>
-        <a id="home" href="#">Home</a>
-	    <a id="more" href="#">More</a>
-	    <a id="info" href="#">Info</a>
+        <a  href="home.html">Home</a>
+	    <a href="more.html">More</a>
+	    <a  href="info.html">Info</a>
         </nav>
     </header>
 
