--- a/info.html
+++ b/info.html
@@ -89,9 +89,9 @@
             <img src="tgamoa2.jpg" alt="Te Maru o Mauao Logo">
         </div>
         <nav>
-            <a id="home" href="home.html">Home</a>
-	    <a id="more" href="more.html">More</a>
-	    <a id="info" href="info.html">Info</a>
+            <a href="home.html">Home</a>
+	    <a href="more.html">More</a>
+	    <a href="info.html">Info</a>
 
         </nav>
     </header>
