--- a/more.html
+++ b/more.html
@@ -121,9 +121,9 @@
 	<a href="home.html"><img src="tgamoa2.jpg" alt="logo";></a>
         </div>
         <nav>
-        <a id="home" href="#">Home</a>
-	    <a id="more" href="#">More</a>
-	    <a id="info" href="#">Info</a>
+        <a href="home.html">Home</a>
+	    <a href="more.html">More</a>
+	    <a href="info.html">Info</a>
         </nav>
     </header>
 
