--- a/more.html
+++ b/more.html
@@ -142,14 +142,15 @@
     </div>
 
     <!-- Sponsor Section -->
-    <div class="sponsor-section">
+    <!-- <div class="sponsor-section"> 
         <h2>Our Sponsors</h2>
+	    
         <div class="sponsor-logos">
             <img src="sponsor1.png" alt="Sponsor 1">
             <img src="sponsor1.png" alt="Sponsor 2">
             <img src="sponsor1.png" alt="Sponsor 3">
             <img src="sponsor1.png" alt="Sponsor 4">
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
