--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
     <!-- Header -->
     <header class="header">
         <div class="logo">
-            <img src="tgamoa2.jpg" alt="Te Maru o Mauao Logo">
+            <a href="home.html"><img src="tgamoa2.jpg" /></a>
         </div>
         <nav>
         <a  href="home.html">Home</a>
