--- a/more.html
+++ b/more.html
@@ -118,7 +118,7 @@
     <!-- Header -->
     <header class="header">
         <div class="logo">
-	<a href="home.html"><img src="tgamoa2.jpg" alt="logo";></a>
+	  <a href="home.html"><img src="tgamoa2.jpg" /></a>
         </div>
         <nav>
         <a href="home.html">Home</a>
