--- a/more.html
+++ b/more.html
@@ -135,7 +135,14 @@
         <div class="content">
 		<h1 class="title">Te Maru o Mauao </h1>
 		<h1 style="font-style:italic" class="title">Tauranga Moana Basketball Association</h1>
-   <p><p>Kia ora! We are the Tauranga Māori Basketball Association, a non-profit organization dedicated to supporting our players and teams as they compete in the <span><a href="https://www.maoribasketball.co.nz/" target="_blank">Poitūkohu Māori National Tournament</a></span>. Our mission is to empower our athletes and represent our community with pride.<br><br></p></p>
+   <p>
+KO WAI MATOU - ABOUT US
+We are the Tauranga Māori Basketball Association, a non-profit organization dedicated to supporting our players and teams as they compete in the <span><a href="https://www.maoribasketball.co.nz/" target="_blank">Poitūkohu Māori National Tournament</a></span>. Our mission is to empower our athletes and represent our community with pride.
+KO WHAKAPAPA - HISTORY
+Te Maru o Mauao was established in 2017 and hails from Tauranga Moana iwi of Ngai Te Rangi, Ngāti Ranginui and Ngāti Pūkenga. As a Māori basketball club, we welcome all whānau who love playing poitūkohu, basketball. A main highlight for the club is attending the NZ National Māori Basketball tournament in January, in Rotorua. To play for Mauao at the tournament you must be Māori, live within our boundaries of ‘mai ngā kuri a Whārei ki Wairākei’ or whakapapa to one of our three iwi of Tauranga Moana. We are proud of our whānau for securing national titles over the years and attribute this to our Uara club values, our fun caring, positive playing, coaching environment, and strong sense of belonging. 
+WHAKAURUURU - REGISTRATION
+If you are interested in playing for the club then please complete<span><a href="https://docs.google.com/forms/d/e/1FAIpQLSegLqYyo0M-ZzmULGIZQiM6fGhyVO43bCygcIFtFdEsGwLWJA/viewform" target="_blank">the registration form</a></span>. Note to play for the club at the NZ Māori National Basketball tournament you must either live in Tauranga Moana, or whakapapa to Ngai Te Rangi, Ngāti Ranginui or Ngāti Pūkenga. 
+	   
 </p>
            
         </div>
