--- a/info.html
+++ b/info.html
@@ -77,6 +77,18 @@
             margin-right: 10px; /* Space between buttons */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Add text shadow */
         }
+	  
+.hero {
+    background: url('tmom1.jpg') no-repeat top center/cover;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #feda62;
+    text-align: center;
+    position: relative;
+}
+
 
     </style>
     <script>
