--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@
         }
 	  
 .hero {
-    background: url('tmom1.jpg') no-repeat top center/cover;
+    background: url('Te Maru o Mauao at Awards Evening 2017.jpg') no-repeat top center/cover;
     height: 100vh;
     display: flex;
     align-items: center;
