--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@
         }
 	  
 .hero {
-    background: url('Te Maru U9.jpg') no-repeat top center/cover;
+    background: url('Te Maru U9 Kotiro.jpg') no-repeat top center/cover;
     height: 100vh;
     display: flex;
     align-items: center;
